--- a/frontend/src/components/SlideMenu/MoveDownAdvices.css
+++ b/frontend/src/components/SlideMenu/MoveDownAdvices.css
@@ -3,12 +3,12 @@
     width: 100px;
     position: absolute;
     top: 50px;
-    right: 1120px;
+    right: 1110px;
     list-style: none;
     text-align: center;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
   .movedown-link-advices {
@@ -18,7 +18,6 @@
     text-decoration: none;
     color: #fff;
     padding: 10px;
-    text-align: start;
     position: relative;
     font-size: 15px;
   }
@@ -34,7 +33,7 @@
         position: absolute;
         width: 80px;
         top: 50px;
-        right: 515px;
+        right: 510px;
         list-style: none;
         text-align: center;
         border-bottom-right-radius: 5px;
@@ -46,4 +45,24 @@
       .movedown-link-advices {
         font-size: 12px;
       }
+  }
+
+  @media screen and (min-width:900px) and (max-width: 1000px) {
+    .movedown-menu-advices {
+      background: rgb(0, 0, 0);
+      position: absolute;
+      width: 80px;
+      top: 50px;
+      right: 540px;
+      list-style: none;
+      text-align: center;
+      border-bottom-right-radius: 5px;
+      border-bottom-left-radius: 5px;
+      font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-size: 15px;
+    }
+
+    .movedown-link-advices {
+      font-size: 12px;
+    }
   }
