--- a/frontend/src/components/SlideMenu/MoveDownDiabetes.css
+++ b/frontend/src/components/SlideMenu/MoveDownDiabetes.css
@@ -3,7 +3,7 @@
     width: 110px;
     position: absolute;
     top: 50px;
-    right: 1460px;
+    right: 1445px;
     list-style: none;
     text-align: center;
     border-bottom-right-radius: 5px;
@@ -18,7 +18,6 @@
     text-decoration: none;
     color: #fff;
     padding: 10px;
-    text-align: start;
     position: relative;
     font-size: 15px;
   }
@@ -34,7 +33,7 @@
         position: absolute;
         width: 85px;
         top: 50px;
-        right: 682px;
+        right: 675px;
         list-style: none;
         text-align: center;
         border-bottom-right-radius: 5px;
@@ -46,4 +45,24 @@
       .movedown-link-diabetes {
         font-size: 12px;
       }
+  }
+
+  @media screen and (min-width:900px) and (max-width: 1000px) {
+    .movedown-menu-diabetes {
+      background: rgb(0, 0, 0);
+      position: absolute;
+      width: 85px;
+      top: 50px;
+      right: 725px;
+      list-style: none;
+      text-align: center;
+      border-bottom-right-radius: 5px;
+      border-bottom-left-radius: 5px;
+      font-size: 15px;
+      font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    .movedown-link-diabetes {
+      font-size: 12px;
+    }
   }
