--- a/frontend/src/components/Email/Contact.css
+++ b/frontend/src/components/Email/Contact.css
@@ -15,7 +15,7 @@
 .name-holder {
     position: relative;
     left: 45%;
-    bottom: -60px;
+    bottom: -130px;
     opacity: 0.7;
 
 }
@@ -23,63 +23,53 @@
 .email-holder {
     position: relative;
     left: 45%;
-    bottom: -80px;
+    bottom: -150px;
     opacity: 0.7;
 }
 
 .text-holder {
     position: relative;
     left: 45%;
-    bottom: -100px;
+    bottom: -170px;
     opacity: 0.7;
 }
 
 .form-holder {
     position: relative;
     left: 35%;
-    bottom: -150px;
+    bottom: -220px;
     opacity: 0.7;
 }
 
 .submit-holder {
     position: relative;
     left: 60%;
-    bottom: -180px;
+    bottom: -170px;
     opacity: 1;
 }
 
-.header-button-sub {
-    width: 110px;
-    height: 35px;
-    position: relative;
-    right: 210px;
-    font-size: 14px;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
-    border: none;
-    background-size: 200% 100%;
-    border-radius: 20px;
-  }
-  
-  .header-button-sub:hover {
-    background-position: 100% 0;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-  }
-  
-  .header-button-sub:focus {
-    outline: none;
-  }
-  
-  .header-button-sub.btn {
-    background-image: linear-gradient(
-      to right,
-      #25aae1,
-      #4481eb,
-      #04befe,
-      #3f86ed
-    );
-    box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
-  }
+.footer-button {
+  position: relative;
+  top: 100px;
+  right: 215px;
+  display: inline-block;
+  padding: 1em 2.5em;
+  margin: 0 0.1em 0.1em 0;
+  border: 0.16em solid rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0);
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  color: rgb(255, 255, 255);
+  text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
+  text-align: center;
+  transition: all 0.5s;
+  border-radius: 2em;
+  cursor: pointer;
+}
+
+.footer-button:hover {
+  color: rgb(0, 0, 0);
+  background-color: transparent
+}
