--- a/frontend/src/components/More/Curiosities.css
+++ b/frontend/src/components/More/Curiosities.css
@@ -365,8 +365,9 @@
     margin-top: 2.5em;
     margin-left: 0.2em;
     margin-right: 0.2em;
-    font-weight: 100;
+    font-weight: 400;
     color: rgb(255, 255, 255);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     cursor: pointer;
   }
 
@@ -375,8 +376,9 @@
     margin-top: 5.0em;
     margin-left: 0.2em;
     margin-right: 0.2em;
-    font-weight: 100;
+    font-weight: 400;
     color: rgb(255, 255, 255);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     cursor: pointer;
   }
 
@@ -385,8 +387,9 @@
     margin-top: 4.5em;
     margin-left: 0.2em;
     margin-right: 0.2em;
-    font-weight: 100;
+    font-weight: 400;
     color: rgb(255, 255, 255);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     cursor: pointer;
   }
 
@@ -395,8 +398,9 @@
     margin-top: 5em;
     margin-left: 0.2em;
     margin-right: 0.2em;
-    font-weight: 100;
+    font-weight: 400;
     color: rgb(255, 255, 255);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     cursor: pointer;
   }
 
@@ -405,8 +409,9 @@
     margin-top: 4.0em;
     margin-left: 0.2em;
     margin-right: 0.2em;
-    font-weight: 100;
+    font-weight: 400;
     color: rgb(255, 255, 255);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     cursor: pointer;
   }
 
@@ -415,8 +420,9 @@
     margin-top: 4.0em;
     margin-left: 0.2em;
     margin-right: 0.2em;
-    font-weight: 100;
+    font-weight: 400;
     color: rgb(255, 255, 255);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     cursor: pointer;
   }
 
@@ -425,8 +431,9 @@
     margin-top: 4.5em;
     margin-left: 0.2em;
     margin-right: 0.2em;
-    font-weight: 100;
+    font-weight: 400;
     color: rgb(255, 255, 255);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     cursor: pointer;
   }
 
@@ -435,7 +442,8 @@
     margin-top: 4.5em;
     margin-left: 0.2em;
     margin-right: 0.2em;
-    font-weight: 100;
+    font-weight: 400;
     color: rgb(255, 255, 255);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     cursor: pointer;
   }
