--- a/frontend/src/components/SlideMenu/MoveDownMedicaments.css
+++ b/frontend/src/components/SlideMenu/MoveDownMedicaments.css
@@ -18,6 +18,7 @@
       text-decoration: none;
       color: #fff;
       padding: 10px;
+      right: 20px;
       position: relative;
       font-size: 15px;
     }
