--- a/frontend/src/components/SlideMenu/MoveDownMore.css
+++ b/frontend/src/components/SlideMenu/MoveDownMore.css
@@ -16,8 +16,9 @@
     text-decoration: none;
     color: #fff;
     padding: 10px;
+    right: 10px;
     position: relative;
-    font-size: 15px;
+    font-size: 18px;
   }
 
   .movedown-link-more:hover {
