--- a/frontend/src/components/Home/Converters.css
+++ b/frontend/src/components/Home/Converters.css
@@ -1,12 +1,4 @@
-.Converters {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .background-image-converters {
+.background-image-converters {
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -16,106 +8,14 @@
     opacity: 0.5;
   }
 
-  .first-table {
-    position:relative;
-    top: 50px;
-    left: 1220px;
-  }
-
-  .second-table {
-    position:relative;
-    top: 50px;
-    left: 1370px;
-  }
-
-  .third-table {
-    position:relative;
-    top: 400px;
-    left: -80px;
-  }
-
-  .fourth-table {
-    position:relative;
-    top: 400px;
-    right: -70px;
-  }
-
-  .fifth-table {
-    position:relative;
-    top: 750px;
-    right: 1380px;
-  }
-
-  .sixth-table {
-    position:relative;
-    top: 750px;
-    right: 1230px;
-  }
-
-  table {
+  .first-table-pos {
     position: relative;
-    border: 3px solid rgb(0, 0, 0);
-    width: 650px;
-    height: 300px;
-    bottom: 260px;
-    background-color: rgba(15, 14, 13, 0.397);
-    margin-top: 20px;
-    border-radius: 15px;
+    width: 600px;
+    height: 250px;
+    top: 100px;
+    left: 100px;
   }
-    
+
   th {
-    border-bottom: 2px solid black;
-  }
-    
-  td {
     text-align: center;
-  }
-
-  @media screen and (max-width: 900px) {
-    table {
-      position: relative;
-      border: 3px solid rgb(0, 0, 0);
-      width: 400px;
-      height: 300px;
-      bottom: 260px;
-      background-color: rgba(15, 14, 13, 0.397);
-      margin-top: 20px;
-      border-radius: 15px;
-    }
-
-    .first-table {
-      position:relative;
-      top: 50px;
-      left: 790px;
-    }
-  
-    .second-table {
-      position:relative;
-      top: 50px;
-      left: 800px;
-    }
-  
-    .third-table {
-      position:relative;
-      top: 400px;
-      left: -10px;
-    }
-  
-    .fourth-table {
-      position:relative;
-      top: 400px;
-      right: 0px;
-    }
-  
-    .fifth-table {
-      position:relative;
-      top: 750px;
-      right: 810px;
-    }
-  
-    .sixth-table {
-      position:relative;
-      top: 750px;
-      right: 800px;
-    }
   }
