--- a/frontend/src/components/Home/Converters.css
+++ b/frontend/src/components/Home/Converters.css
@@ -10,12 +10,16 @@
 
   .first-table-pos {
     position: relative;
-    width: 600px;
-    height: 250px;
     top: 100px;
-    left: 100px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 100px;
   }
 
   th {
     text-align: center;
+  }
+
+  td {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
