--- a/frontend/src/components/AboutDiabetes/Daily.css
+++ b/frontend/src/components/AboutDiabetes/Daily.css
@@ -13,7 +13,7 @@
     color: rgb(255, 255, 255);
     text-align: center;
     font-weight: 100;
-    font-size: 0.9em;
+    font-size: 16px;
     top: -10px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 26px;
