--- a/frontend/src/components/Home/Informations.css
+++ b/frontend/src/components/Home/Informations.css
@@ -1,12 +1,12 @@
 .image-for-info {
-        position: fixed;
-        top: 50%;
-        left: 200px;
-        height: 600px;
-        width: 380px;
-        transform: translate(-50%, -50%);
-        z-index: 1;
-        text-align: center;
+  position: fixed;
+  top: 50%;
+  left: 200px;
+  height: 600px;
+  width: 380px;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  text-align: center;
 }
 
 .image-for-type {
@@ -104,8 +104,8 @@
   margin-left: 5px;
   font-weight: 100;
   color: rgb(255, 255, 255);
-  cursor:default;
   line-height: 27px;
+  cursor: pointer;
 }
 
 .image__description-info-for-types {
@@ -115,8 +115,8 @@
   margin-left: 5px;
   font-weight: 400;
   color: rgb(255, 255, 255);
-  cursor:default;
   line-height: 25px;
+  cursor: pointer;
 }
 
 .image__description-info-for-treatment {
@@ -126,8 +126,8 @@
   margin-left: 5px;
   font-weight: 400;
   color: rgb(255, 255, 255);
-  cursor:default;
   line-height: 25px;
+  cursor: pointer;
 }
 
 
