I made code correct with background image

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,3 +17,13 @@
   color: #fff;
   font-size: 100px;
 }
+
+.background-image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+  display: flex;
+  opacity: 0.5;
+}
