--- a/frontend/src/components/Home/Login.css
+++ b/frontend/src/components/Home/Login.css
@@ -1,9 +1,8 @@
-.background-image {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
-    display: flex;
-    opacity: 0.6;
-  }
+.background {
+  position: relative;
+  top: 250px;
+}
+
+.email-form {
+  padding-bottom: 15px;
+}
