Table is centered and padding is added to the component - i fetch the data from the page and its showing up

--- a/frontend/src/components/Home/UserList.css
+++ b/frontend/src/components/Home/UserList.css
@@ -1,7 +1,7 @@
 .card-position {
     position: relative;
-    top: 100px;
     left: 100px;
     width: 1500px;
-    height: 1500px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
