--- a/frontend/src/components/SlideMenu/MoveDownMore.css
+++ b/frontend/src/components/SlideMenu/MoveDownMore.css
@@ -16,9 +16,9 @@
     text-decoration: none;
     color: #fff;
     padding: 10px;
-    right: 10px;
+    right: 20px;
     position: relative;
-    font-size: 18px;
+    font-size: 15px !important;
   }
 
   .movedown-link-more:hover {
