I moved provider and store from app.js to index.js also i created index.js to store data from userAction

--- a/frontend/src/components/SlideMenu/MoveDownMore.css
+++ b/frontend/src/components/SlideMenu/MoveDownMore.css
@@ -19,6 +19,7 @@
     right: 20px;
     position: relative;
     font-size: 15px !important;
+    padding-bottom: 5px;
   }
 
   .movedown-link-more:hover {
