--- a/frontend/src/components/More/Curiosities.css
+++ b/frontend/src/components/More/Curiosities.css
@@ -201,8 +201,8 @@
   .image__overlay-curiosities-fat {
     position: absolute;
     bottom: 60%;
-    left: 20%;
-    width: 302px;
+    left: 21%;
+    width: 299px;
     height: 300px;
     opacity: 0;
     transition: opacity 0.25s;
@@ -220,8 +220,8 @@
   .image__overlay-curiosities-die {
     position: absolute;
     bottom: 60%;
-    left: 20%;
-    width: 302px;
+    left: 21%;
+    width: 299px;
     height: 300px;
     opacity: 0;
     transition: opacity 0.25s;
@@ -239,8 +239,8 @@
   .image__overlay-curiosities-types {
     position: absolute;
     bottom: 60%;
-    left: 20%;
-    width: 302px;
+    left: 21%;
+    width: 299px;
     height: 300px;
     opacity: 0;
     transition: opacity 0.25s;
@@ -258,8 +258,8 @@
   .image__overlay-curiosities-pregnant {
     position: absolute;
     bottom: 60%;
-    left: 20%;
-    width: 302px;
+    left: 21%;
+    width: 299px;
     height: 300px;
     opacity: 0;
     transition: opacity 0.25s;
@@ -277,8 +277,8 @@
   .image__overlay-curiosities-percent {
     position: absolute;
     top: 80%;
-    left: 20%;
-    width: 302px;
+    left: 21%;
+    width: 299px;
     height: 300px;
     opacity: 0;
     transition: opacity 0.25s;
@@ -296,8 +296,8 @@
   .image__overlay-curiosities-count {
     position: absolute;
     top: 80%;
-    left: 20%;
-    width: 302px;
+    left: 21%;
+    width: 299px;
     height: 300px;
     opacity: 0;
     transition: opacity 0.25s;
@@ -315,8 +315,8 @@
   .image__overlay-curiosities-blind {
     position: absolute;
     top: 80%;
-    left: 20%;
-    width: 302px;
+    left: 21%;
+    width: 299px;
     height: 300px;
     opacity: 0;
     transition: opacity 0.25s;
@@ -334,8 +334,8 @@
   .image__overlay-curiosities-treatment {
     position: absolute;
     top: 80%;
-    left: 20%;
-    width: 302px;
+    left: 21%;
+    width: 299px;
     height: 300px;
     opacity: 0;
     transition: opacity 0.25s;
@@ -357,7 +357,7 @@
     margin-right: 0.2em;
     font-weight: 400;
     color: rgb(255, 255, 255);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
   }
 
@@ -368,7 +368,7 @@
     margin-right: 0.2em;
     font-weight: 400;
     color: rgb(255, 255, 255);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
   }
 
@@ -379,7 +379,7 @@
     margin-right: 0.2em;
     font-weight: 400;
     color: rgb(255, 255, 255);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
   }
 
@@ -390,7 +390,7 @@
     margin-right: 0.2em;
     font-weight: 400;
     color: rgb(255, 255, 255);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
   }
 
@@ -401,7 +401,7 @@
     margin-right: 0.2em;
     font-weight: 400;
     color: rgb(255, 255, 255);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
   }
 
@@ -412,7 +412,7 @@
     margin-right: 0.2em;
     font-weight: 400;
     color: rgb(255, 255, 255);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
   }
 
@@ -423,7 +423,7 @@
     margin-right: 0.2em;
     font-weight: 400;
     color: rgb(255, 255, 255);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
   }
 
@@ -434,6 +434,6 @@
     margin-right: 0.2em;
     font-weight: 400;
     color: rgb(255, 255, 255);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
   }
