--- a/frontend/src/components/More/Infoline.css
+++ b/frontend/src/components/More/Infoline.css
@@ -11,7 +11,7 @@
 
 .image-for-infoline-ascensia {
     position: fixed;
-    top: 50%;
+    top: 49%;
     left: 600px;
     bottom: 120px;
     width: 380px;
@@ -22,7 +22,7 @@
 
 .image-for-infoline-abbott {
     position: fixed;
-    top: 51%;
+    top: 50%;
     left: 600px;
     bottom: 360px;
     width: 380px;
@@ -33,7 +33,7 @@
 
 .image-for-infoline-lifescan {
     position: fixed;
-    top: 52%;
+    top: 53%;
     left: 600px;
     bottom: 500px;
     width: 380px;
@@ -44,7 +44,7 @@
 
 .image-for-infoline-medtronic {
     position: fixed;
-    top: 67%;
+    top: 70%;
     left: 600px;
     bottom: 680px;
     width: 380px;
@@ -55,7 +55,7 @@
 
 .image-for-infoline-bioton {
     position: fixed;
-    top: 81%;
+    top: 85%;
     left: 600px;
     bottom: 680px;
     width: 380px;
@@ -68,7 +68,7 @@
     height: 50px;
     width: 50px;
     position:relative;
-    bottom: 12%;
+    bottom: 15%;
     left: 10%;
     opacity: 0.9;
     transition: all 0.5s ease;
@@ -80,7 +80,7 @@
     height: 50px;
     width: 50px;
     position:relative;
-    bottom: 19%;
+    bottom: 20%;
     left: 10%;
     opacity: 0.9;
     transition: all 0.5s ease;
@@ -92,7 +92,7 @@
     height: 50px;
     width: 50px;
     position:relative;
-    bottom: 105%;
+    bottom: 80%;
     left: 10%;
     opacity: 0.9;
     transition: all 0.5s ease;
@@ -137,81 +137,75 @@
   }
 
   .image__description-infoline-roche {
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin-top: 2.5em;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
     font-weight: 100;
     color: rgb(0, 0, 0);
     cursor:default;
     position: relative;
     left: 300px;
     bottom: 200px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
   .image__description-infoline-ascensia {
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin-top: 2.5em;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
     font-weight: 100;
     color: rgb(0, 0, 0);
     cursor:default;
     position: relative;
     left: 300px;
     bottom: 200px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
   .image__description-infoline-abbott {
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin-top: 2.5em;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
     font-weight: 100;
     color: rgb(0, 0, 0);
     cursor:default;
     position: relative;
     left: 300px;
     bottom: 180px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
   .image__description-infoline-lifescan {
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin-top: 2.5em;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
     font-weight: 100;
     color: rgb(0, 0, 0);
     cursor:default;
     position: relative;
     left: 300px;
     bottom: 130px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
   .image__description-infoline-medtronic {
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin-top: 2.5em;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
     font-weight: 100;
     color: rgb(0, 0, 0);
     cursor:default;
     position: relative;
     left: 300px;
     bottom: 130px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
   .image__description-infoline-bioton {
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin-top: 2.5em;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
     font-weight: 100;
     color: rgb(0, 0, 0);
     cursor:default;
     position: relative;
     left: 300px;
     bottom: 130px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
   }
 
   @media screen and (max-width: 900px) {
