--- a/MobileApp/app/src/main/res/layout/item_diabetesmobileapp.xml
+++ b/MobileApp/app/src/main/res/layout/item_diabetesmobileapp.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tvDiabetesMobileApp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="asd"
+        android:text="ex"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cbDiabetesMobileApp"
