--- a/frontend/src/components/FooterComp.css
+++ b/frontend/src/components/FooterComp.css
@@ -22,7 +22,7 @@
     border: 0.16em solid rgb(255, 255, 255);
     box-sizing: border-box;
     text-decoration: none;
-    font-family: "Roboto", sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     font-weight: 400;
     color: #ffffff;
     text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
