--- a/frontend/src/components/Home/Body.css
+++ b/frontend/src/components/Home/Body.css
@@ -7,7 +7,6 @@
   height: 570px;
   width: 380px;
   transform: translate(-50%, -50%);
-  z-index: 1;
   text-align: center;
   backdrop-filter: blur(2px);
 }
@@ -21,7 +20,6 @@
   height: 570px;
   width: 380px;
   transform: translate(-50%, -50%);
-  z-index: 1;
   text-align: center;
   backdrop-filter: blur(2px);
 }
@@ -35,7 +33,6 @@
   height: 570px;
   width: 380px;
   transform: translate(-50%, -50%);
-  z-index: 1;
   text-align: center;
   backdrop-filter: blur(2px);
 }
@@ -49,7 +46,6 @@
   height: 570px;
   width: 380px;
   transform: translate(-50%, -50%);
-  z-index: 1;
   text-align: center;
   backdrop-filter: blur(2px);
 }
@@ -63,7 +59,6 @@
   height: 570px;
   width: 380px;
   transform: translate(-50%, -50%);
-  z-index: 1;
   text-align: center;
   backdrop-filter: blur(2px);
 }
@@ -72,14 +67,14 @@
   height: 400px;
   width: 350px;
   position:relative;
-  top: 11%;
+  top: 10%;
   border: 1.5px solid #000000;
-  opacity: 0.9;
   transition: all 0.5s ease;
 }
 
 .photo_cards:hover {
   transform: scale(0.9);
+  border-radius: 10px;
 }
   
   h1 {
