--- a/frontend/src/components/Home/Calculator.css
+++ b/frontend/src/components/Home/Calculator.css
@@ -41,7 +41,9 @@
   }
   
   .correct-textarea {
+    text-decoration: none;
     position: relative;
+    background-color: #0000005d;
     top: 2px;
     left: 2px;
     width: 35px;
@@ -51,11 +53,13 @@
     font-size: 16px;
     padding-top: 2px;
     padding-left: 9px;
-    border-radius: 5px;
+    border-radius: 3px;
+    border: 2px solid black;
   }
 
   .first-breakfast {
     position: relative;
+    background-color: #0000005d;
     top: 25px;
     left: 130px;
     width: 35px;
@@ -65,7 +69,8 @@
     font-size: 16px;
     padding-top: 3px;
     padding-left: 5px;
-    border-radius: 5px;
+    border-radius: 3px;
+    border: 2px solid black;
   }
   .first-breakfast-position {
     font-size: 0.78em;
@@ -79,6 +84,7 @@
 
   .second-breakfast {
     position: relative;
+    background-color: #0000005d;
     top: 20px;
     left: 130px;
     width: 35px;
@@ -88,9 +94,10 @@
     font-size: 16px;
     padding-top: 5px;
     padding-left: 5px;
-    border-radius: 5px;
+    border-radius: 3px;
+    border: 2px solid black;
   }
-  .second-breakfast-position {
+  .position {
     font-size: 0.78em;
     letter-spacing: 4px;
     margin-top: -0.8em;
@@ -102,6 +109,7 @@
 
   .lunch {
     position: relative;
+    background-color: #0000005d;
     top: 20px;
     left: 130px;
     width: 35px;
@@ -111,20 +119,13 @@
     font-size: 16px;
     padding-top: 5px;
     padding-left: 5px;
-    border-radius: 5px;
-  }
-  .lunch-position {
-    font-size: 0.78em;
-    letter-spacing: 4px;
-    margin-top: -0.8em;
-    margin-left: -3em;
-    font-weight: 400;
-    color: rgb(0, 0, 0);
-    cursor:default;
+    border-radius: 3px;
+    border: 2px solid black;
   }
 
   .tea {
     position: relative;
+    background-color: #0000005d;
     top: 20px;
     left: 130px;
     width: 35px;
@@ -134,20 +135,13 @@
     font-size: 16px;
     padding-top: 5px;
     padding-left: 5px;
-    border-radius: 5px;
-  }
-  .tea-position {
-    font-size: 0.78em;
-    letter-spacing: 4px;
-    margin-top: -0.8em;
-    margin-left: -3em;
-    font-weight: 400;
-    color: rgb(0, 0, 0);
-    cursor:default;
+    border-radius: 3px;
+    border: 2px solid black;
   }
 
   .first-dinner {
     position: relative;
+    background-color: #0000005d;
     top: 20px;
     left: 130px;
     width: 35px;
@@ -157,20 +151,13 @@
     font-size: 16px;
     padding-top: 5px;
     padding-left: 5px;
-    border-radius: 5px;
-  }
-  .first-dinner-position {
-    font-size: 0.78em;
-    letter-spacing: 4px;
-    margin-top: -0.8em;
-    margin-left: -3em;
-    font-weight: 400;
-    color: rgb(0, 0, 0);
-    cursor:default;
+    border-radius: 3px;
+    border: 2px solid black;
   }
 
   .second-dinner {
     position: relative;
+    background-color: #0000005d;
     top: 20px;
     left: 130px;
     width: 35px;
@@ -180,17 +167,8 @@
     font-size: 16px;
     padding-top: 5px;
     padding-left: 5px;
-    border-radius: 5px;
-  }
-
-  .second-dinner-position {
-    font-size: 0.78em;
-    letter-spacing: 4px;
-    margin-top: -0.8em;
-    margin-left: -3em;
-    font-weight: 400;
-    color: rgb(0, 0, 0);
-    cursor:default;
+    border-radius: 3px;
+    border: 2px solid black;
   }
 
   .sugar {
@@ -203,6 +181,9 @@
     resize: none;
     font-size: 16px;
     border-radius: 5px;
+    border: 2px solid black;
+    background-color: #0000005d;
+
   }
 
   .sugar-position {
@@ -214,6 +195,7 @@
     color: rgb(0, 0, 0);
     letter-spacing: 5px;
     text-transform: uppercase;
+    
   }
 
   .first-n {
@@ -246,6 +228,8 @@
     resize: none;
     font-size: 16px;
     border-radius: 4px;
+    border: 2px solid black;
+    background-color: #0000005d;
   }
 
   .final-result {
