--- a/frontend/src/components/More/Curiosities.css
+++ b/frontend/src/components/More/Curiosities.css
@@ -86,7 +86,7 @@
   text-align: center;
 }
 
-.curiosities-photo-fat {
+.curiosities-photo {
     height: 300px;
     width: 300px;
     position:relative;
@@ -99,106 +99,8 @@
     opacity: 1;
     border: 3px solid #000000;
   }
-
-  .curiosities-photo-die {
-    height: 300px;
-    width: 300px;
-    position:relative;
-    bottom: 10%;
-    left: 10%;
-    opacity: 0.9;
-    transition: all 0.5s ease;
-    border-radius: 2%;
-    cursor:auto;
-    opacity: 1;
-    border: 3px solid #000000;
-  }
-
-  .curiosities-photo-types {
-    height: 300px;
-    width: 300px;
-    position:relative;
-    bottom: 10%;
-    left: 10%;
-    opacity: 0.9;
-    transition: all 0.5s ease;
-    border-radius: 2%;
-    cursor:auto;
-    opacity: 1;
-    border: 3px solid #000000;
-  }
-
-  .curiosities-photo-pregnant {
-    height: 300px;
-    width: 300px;
-    position:relative;
-    bottom: 10%;
-    left: 10%;
-    opacity: 0.9;
-    transition: all 0.5s ease;
-    border-radius: 2%;
-    cursor:auto;
-    opacity: 1;
-    border: 3px solid #000000;
-  }
-
-  .curiosities-photo-percent {
-    height: 300px;
-    width: 300px;
-    position:relative;
-    bottom: 10%;
-    left: 10%;
-    opacity: 0.9;
-    transition: all 0.5s ease;
-    border-radius: 2%;
-    cursor:auto;
-    opacity: 1;
-    border: 3px solid #000000;
-  }
-
-  .curiosities-photo-count {
-    height: 300px;
-    width: 300px;
-    position:relative;
-    bottom: 10%;
-    left: 10%;
-    opacity: 0.9;
-    transition: all 0.5s ease;
-    border-radius: 2%;
-    cursor:auto;
-    opacity: 1;
-    border: 3px solid #000000;
-  }
-
-  .curiosities-photo-blind {
-    height: 300px;
-    width: 300px;
-    position:relative;
-    bottom: 10%;
-    left: 10%;
-    opacity: 0.9;
-    transition: all 0.5s ease;
-    border-radius: 2%;
-    cursor:auto;
-    opacity: 1;
-    border: 3px solid #000000;
-  }
-
-  .curiosities-photo-treatment {
-    height: 300px;
-    width: 300px;
-    position:relative;
-    bottom: 10%;
-    left: 10%;
-    opacity: 0.9;
-    transition: all 0.5s ease;
-    border-radius: 2%;
-    cursor:auto;
-    opacity: 1;
-    border: 3px solid #000000;
-  }
-
-  .image__overlay-curiosities-fat {
+  
+  .image__overlay-curiosities-top {
     position: absolute;
     bottom: 60%;
     left: 21%;
@@ -212,69 +114,12 @@
     cursor: pointer;
   } 
 
-  .image__overlay-curiosities-fat:hover {
+  .image__overlay-curiosities-top:hover {
     opacity: 1;
     transition: 1.2s;
   }
 
-  .image__overlay-curiosities-die {
-    position: absolute;
-    bottom: 60%;
-    left: 21%;
-    width: 299px;
-    height: 300px;
-    opacity: 0;
-    transition: opacity 0.25s;
-    font-size: 10px;
-    background-color: rgba(15, 14, 13, 0.651);
-    border-radius: 2%;
-    cursor: pointer;
-  } 
-
-  .image__overlay-curiosities-die:hover {
-    opacity: 1;
-    transition: 1.2s;
-  }
-
-  .image__overlay-curiosities-types {
-    position: absolute;
-    bottom: 60%;
-    left: 21%;
-    width: 299px;
-    height: 300px;
-    opacity: 0;
-    transition: opacity 0.25s;
-    font-size: 10px;
-    background-color: rgba(15, 14, 13, 0.651);
-    border-radius: 2%;
-    cursor: pointer;
-  } 
-
-  .image__overlay-curiosities-types:hover {
-    opacity: 1;
-    transition: 1.2s;
-  }
-
-  .image__overlay-curiosities-pregnant {
-    position: absolute;
-    bottom: 60%;
-    left: 21%;
-    width: 299px;
-    height: 300px;
-    opacity: 0;
-    transition: opacity 0.25s;
-    font-size: 10px;
-    background-color: rgba(15, 14, 13, 0.651);
-    border-radius: 2%;
-    cursor: pointer;
-  } 
-
-  .image__overlay-curiosities-pregnant:hover {
-    opacity: 1;
-    transition: 1.2s;
-  }
-
-  .image__overlay-curiosities-percent {
+  .image__overlay-curiosities-bottom {
     position: absolute;
     top: 80%;
     left: 21%;
@@ -288,64 +133,7 @@
     cursor: pointer;
   } 
 
-  .image__overlay-curiosities-percent:hover {
-    opacity: 1;
-    transition: 1.2s;
-  }
-
-  .image__overlay-curiosities-count {
-    position: absolute;
-    top: 80%;
-    left: 21%;
-    width: 299px;
-    height: 300px;
-    opacity: 0;
-    transition: opacity 0.25s;
-    font-size: 10px;
-    background-color: rgba(15, 14, 13, 0.651);
-    border-radius: 2%;
-    cursor: pointer;
-  } 
-
-  .image__overlay-curiosities-count:hover {
-    opacity: 1;
-    transition: 1.2s;
-  }
-
-  .image__overlay-curiosities-blind {
-    position: absolute;
-    top: 80%;
-    left: 21%;
-    width: 299px;
-    height: 300px;
-    opacity: 0;
-    transition: opacity 0.25s;
-    font-size: 10px;
-    background-color: rgba(15, 14, 13, 0.651);
-    border-radius: 2%;
-    cursor: pointer;
-  } 
-
-  .image__overlay-curiosities-blind:hover {
-    opacity: 1;
-    transition: 1.2s;
-  }
-
-  .image__overlay-curiosities-treatment {
-    position: absolute;
-    top: 80%;
-    left: 21%;
-    width: 299px;
-    height: 300px;
-    opacity: 0;
-    transition: opacity 0.25s;
-    font-size: 10px;
-    background-color: rgba(15, 14, 13, 0.651);
-    border-radius: 2%;
-    cursor: pointer;
-  } 
-
-  .image__overlay-curiosities-treatment:hover {
+  .image__overlay-curiosities-bottom:hover {
     opacity: 1;
     transition: 1.2s;
   }
@@ -361,29 +149,7 @@
     cursor: pointer;
   }
 
-  .image__description-curiosities-die {
-    font-size: 2em;
-    margin-top: 5.0em;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
-    font-weight: 400;
-    color: rgb(255, 255, 255);
-    font-family: Arial, Helvetica, sans-serif;
-    cursor: pointer;
-  }
-
-  .image__description-curiosities-types {
-    font-size: 2em;
-    margin-top: 4.5em;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
-    font-weight: 400;
-    color: rgb(255, 255, 255);
-    font-family: Arial, Helvetica, sans-serif;
-    cursor: pointer;
-  }
-
-  .image__description-curiosities-pregnant {
+  .image__description-curiosities-top {
     font-size: 2em;
     margin-top: 5em;
     margin-left: 0.2em;
@@ -394,42 +160,9 @@
     cursor: pointer;
   }
 
-  .image__description-curiosities-percent {
+  .image__description-curiosities-bottom {
     font-size: 2.3em;
     margin-top: 4.0em;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
-    font-weight: 400;
-    color: rgb(255, 255, 255);
-    font-family: Arial, Helvetica, sans-serif;
-    cursor: pointer;
-  }
-
-  .image__description-curiosities-count {
-    font-size: 2.3em;
-    margin-top: 4.0em;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
-    font-weight: 400;
-    color: rgb(255, 255, 255);
-    font-family: Arial, Helvetica, sans-serif;
-    cursor: pointer;
-  }
-
-  .image__description-curiosities-blind {
-    font-size: 2.3em;
-    margin-top: 4.5em;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
-    font-weight: 400;
-    color: rgb(255, 255, 255);
-    font-family: Arial, Helvetica, sans-serif;
-    cursor: pointer;
-  }
-
-  .image__description-curiosities-treatment {
-    font-size: 2.3em;
-    margin-top: 4.5em;
     margin-left: 0.2em;
     margin-right: 0.2em;
     font-weight: 400;
