--- a/frontend/src/components/Home/Informations.css
+++ b/frontend/src/components/Home/Informations.css
@@ -1,33 +1,3 @@
-.image-for-info {
-  position: fixed;
-  top: 50%;
-  left: 200px;
-  height: 600px;
-  width: 380px;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.image-for-type {
-  position: fixed;
-  top: 50%;
-  left: 800px;
-  height: 600px;
-  width: 380px;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.image-for-treatment {
-  position: fixed;
-  top: 50%;
-  left: 1400px;
-  height: 600px;
-  width: 380px;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
 .info-photo {
   height: 700px;
   width: 400px;
@@ -38,7 +8,6 @@
   cursor: pointer;
   border: 2px solid #000000e0;
 }
-
 
 .image__overlay {
   position: absolute;
@@ -52,52 +21,18 @@
   background-color: rgba(15, 14, 13, 0.651);
 } 
 
-.h2-position {
-  align-items: center;
-  justify-content: center;
-  color: rgb(255, 255, 255);
-  position: absolute;
-  width: 350px;
-  height: 650px;
-  bottom: 0%;
-  left: 15%;
-}
-
  .image__overlay:hover {
   opacity: 1;
   transition: 1.2s;
 }
 
-.image__description-info-for-informations {
+.image__description {
   font-size: 1.59em;
   margin-top: 4em;
   margin-right: 5px;
   margin-left: 5px;
-  font-weight: 100;
   color: rgb(255, 255, 255);
   line-height: 27px;
-  cursor: pointer;
-}
-
-.image__description-info-for-types {
-  font-size: 1.59em;
-  margin-top:3em;
-  margin-right: 5px;
-  margin-left: 5px;
-  font-weight: 400;
-  color: rgb(255, 255, 255);
-  line-height: 25px;
-  cursor: pointer;
-}
-
-.image__description-info-for-treatment {
-  font-size: 1.59em;
-  margin-top: 4em;
-  margin-right: 5px;
-  margin-left: 5px;
-  font-weight: 400;
-  color: rgb(255, 255, 255);
-  line-height: 25px;
   cursor: pointer;
 }
 
